--- a/packages/MonorepoBuilder/packages/Release/config/config.yaml
+++ b/packages/MonorepoBuilder/packages/Release/config/config.yaml
@@ -1,5 +1,12 @@
 parameters:
-    enable_default_release_workers: true
+    release_workers:
+        - "@Symplify\\MonorepoBuilder\\Release\\ReleaseWorker\\SetCurrentMutualDependenciesReleaseWorker"
+        - "@Symplify\\MonorepoBuilder\\Release\\ReleaseWorker\\AddTagToChangelogReleaseWorker"
+        - "@Symplify\\MonorepoBuilder\\Release\\ReleaseWorker\\TagVersionReleaseWorker"
+        - "@Symplify\\MonorepoBuilder\\Release\\ReleaseWorker\\PushTagReleaseWorker"
+        - "@Symplify\\MonorepoBuilder\\Release\\ReleaseWorker\\SetNextMutualDependenciesReleaseWorker"
+        - "@Symplify\\MonorepoBuilder\\Release\\ReleaseWorker\\UpdateBranchAliasReleaseWorker"
+        - "@Symplify\\MonorepoBuilder\\Release\\ReleaseWorker\\PushNextDevReleaseWorker"
     is_stage_required: false
     stages_to_allow_existing_tag: []
 
